--- a/static/style.css
+++ b/static/style.css
@@ -5,6 +5,16 @@
     margin-bottom: 20px;
 }
 
+.stars {
+    display: inline-flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    bottom: -2em;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 
 .overall-rating {
     font-family: Helvetica;
@@ -47,12 +57,6 @@
     margin-left: 80px;
 }
 
-.text-7xl {
-    font-weight: bold;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-align: center;
-}
 
 .card {
     width: 60%;
@@ -63,6 +67,20 @@
     margin-bottom: 20px;
 }
 
+.testimonial {
+    width: 20%;
+    height: 330px;
+    min-width: 320px;
+    max-width: 320px;
+    margin: 10px;
+}
+
+.testimonial-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
 
 .alert {
     float: left;
